--- a/app/assets/stylesheets/shopper.scss
+++ b/app/assets/stylesheets/shopper.scss
@@ -1,9 +1,9 @@
 .shopper {
-    width: 1200px;
-    margin: 0 auto; // Centers the container
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
     h1 {
         width: 100%; // Ensures the h1 takes the full width
         text-align: center; // Centers the text horizontally
@@ -12,15 +12,15 @@
       }
       .product-shopper {
         display: flex;
-        width: calc(50% - 20px); // Adjusts for margin
+        width: calc(50% - 20px);
         margin-bottom: 20px;
         flex-direction: row;
         box-sizing: border-box;
-
         border: 1px solid #ccc;
         background-color: #f9f9f9;
         border-radius: 5px;
         padding: 15px;
+        gap: 20px; 
 
         &:nth-child(odd) {
             margin-right: 10px; // Adds space to the right of odd products
@@ -54,5 +54,36 @@
         }
       }
     }
+    .scontainer {
+      margin: 22px auto; // Center the search container
+      padding: 22px; // Add some padding around the search container
+      width:  100%;
+
+      form {
+          display: flex;
+          justify-content: center; // Center the form contents
+          gap: 12px; // Add space between the search input and button
+
+          .sfield {
+              flex-grow: 1; // Allow the search field to grow and take available space
+              padding: 10px;
+              border: 1px solid #ccc;
+              border-radius: 5px;
+              margin-right: 10px; // Add margin to the right of the search field
+          }
+
+          .sbutton {
+              padding: 10px 20px;
+              border: none;
+              border-radius: 5px;
+              background-color: #3B5998; // A bright blue for contrast
+              color: white;
+              cursor: pointer;
+              transition: background-color 0.2s;
+
+          }
+      }
+  }
+
   }
   
